<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/menubar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/darker_gray">

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_settings"
            android:onClick="openSettings"
            android:scaleType="centerCrop"
            android:contentDescription="@string/options_desc" />

        <ImageButton
            android:id="@+id/button_smiley"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_smiley_normal"
            android:contentDescription="@string/smiley_desc" />

        <TextView
            android:id="@+id/label_mines"
            android:layout_toStartOf="@+id/label_timer"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/label_mines"
            style="@style/TextView_Menubar" />

        <TextView
            android:id="@+id/label_minescount"
            android:layout_toStartOf="@+id/label_timer_value"
            android:layout_below="@+id/label_mines"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/default_minescount"
            style="@style/TextView_Menubar" />

        <TextView
            android:id="@+id/label_timer"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/label_time"
            style="@style/TextView_Menubar" />

        <TextView
            android:id="@+id/label_timer_value"
            android:layout_below="@+id/label_timer"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/default_timecount"
            style="@style/TextView_Menubar" />

    </RelativeLayout>

    <com.otaliastudios.zoom.ZoomLayout
        android:layout_below="@id/menubar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:transformation="centerInside"
        app:transformationGravity="auto"
        app:alignment="center"
        app:overScrollHorizontal="true"
        app:overScrollVertical="true"
        app:overPinchable="true"
        app:horizontalPanEnabled="true"
        app:verticalPanEnabled="true"
        app:zoomEnabled="true"
        app:minZoom="0.7"
        app:minZoomType="zoom"
        app:maxZoom="2.5"
        app:maxZoomType="zoom"
        app:animationDuration="280"
        app:hasClickableChildren="true"
        android:background="@color/dark_gray">

        <com.example.minesweeper.CustomGridLayout
            android:id="@+id/custom_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.otaliastudios.zoom.ZoomLayout>

</RelativeLayout>